@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.3.1) unstable; urgency=low
 
-  * 
+  * http-client: remove Transfer-Encoding and Content-Length from response
+    headers
 
  --
 
